NXP-7005: Show the Nuxeo appliczation name and version on layout showcase

--- a/src/main/resources/web/nuxeo.war/layoutDemo/about.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/about.xhtml
@@ -9,6 +9,12 @@
     <div class="mainContent">
     
       <div>
+        This application is running on top of 
+        #{nuxeoApplicationName} #{nuxeoApplicationVersion}.
+      </div>
+      <br />
+    
+      <div>
         The idea of this application came with
         <a href="http://www.nuxeo.com/en/products/studio" target="_blank">Studio integration</a>,
         as widget types configuration needed to be made user friendly by:
