--- a/src/main/resources/web/nuxeo.war/layoutDemo/introduction.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/introduction.xhtml
@@ -7,12 +7,18 @@
     <h3>Welcome to the Nuxeo Layout Showcase!</h3>
   
     <div class="mainContent">
-    
+
       <div>
         This site presents standard widget types available to the Nuxeo layout service,
         and can be used as a demo, reference and preview application.
         <br />
         You can browse widget types by clicking on items in the left menu.
+      </div>
+      <br />
+
+      <div>
+        This application is running on top of 
+        #{nuxeoApplicationName} #{nuxeoApplicationVersion}.
       </div>
       <br />
 
