--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/view_servers.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/view_servers.xhtml
@@ -18,8 +18,7 @@
           <h:commandLink action="#{serverActions.selectRepository(core.name)}">
             <h:graphicImage value="/img/core_servers.gif" alt="server" />
             <br/>
-            <h:outputText value="#{core.label}" />
-            ( <h:outputText value="#{core.name}" /> )
+            <h:outputText value="#{core.label} (#{core.name})" />
           </h:commandLink>
         </div>
       </nxu:dataList>
