--- a/nuxeo-user-center/src/main/resources/web/nuxeo.war/incl/user_center_view_selector.xhtml
+++ b/nuxeo-user-center/src/main/resources/web/nuxeo.war/incl/user_center_view_selector.xhtml
@@ -15,6 +15,8 @@
       </c:if>
 
       <h:commandLink action="#{userCenterViews.setCurrentViewId(userCenterTab.id)}" immediate="true">
+        <nxu:graphicImage value="#{userCenterTab.icon}"
+              alt="#{messages[userCenterTab.label]}" />
         <h:outputText value="#{messages[userCenterTab.label]}" />
       </h:commandLink>
 
