--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/clientSideBanner.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/clientSideBanner.xhtml
@@ -47,13 +47,13 @@
 
          <div class="bannerBottom unregistered" >
            <div class="bannerMessage">
-            <p style="padding:0px;margin:0px">This application is powered by Nuxeo #{connectUpdateStatusInfo.distributionLabel} and is <span class="bold">not registered in Nuxeo Connect.</span>
+            <p>This application is powered by Nuxeo #{connectUpdateStatusInfo.distributionLabel} and is <span class="bold">not registered in Nuxeo Connect.</span>
             <span id="mayBeNeedUpdate">It might be <span class="bold">not up to date.</span></span>
             <span class="bold" id="connectHotFixesCountMsg" style="display:none"><span id="connectHotFixesCount">3</span> hotfixes have been published since this release.</span></p>
-            <p style="padding:0px;margin:0px"> Enable Nuxeo Connect if you want to register and benefit from automatic maintenance.</p>
+            <p> Enable Nuxeo Connect if you want to register and benefit from automatic maintenance.</p>
            </div>
            <div class="links">
-            <a href="http://doc.nuxeo.com/display/NXDOC/Register+your+Nuxeo+instance" target="_blank">How to enable Nuxeo Connect</a><br/>
+            <a href="http://doc.nuxeo.com/display/NXDOC/Register+your+Nuxeo+instance" target="_blank">How to enable Nuxeo Connect</a>
             <a href="https://connect.nuxeo.com/nuxeo/site/connect/trial/form?source=unregisteredClientBanner&#38;product=#{connectUpdateStatusInfo.distributionLabel}" target="_blank">Subscribe to Nuxeo Connect</a>
            </div>
            <div class="clear" />
