NXP-6860 fixed typos + added link to marketplace to list hitfixes

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/clientSideBanner.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/clientSideBanner.xhtml
@@ -14,7 +14,7 @@
             <div class="bannerMessage">
               <p style="padding:0px;margin:0px">This application is powered by Nuxeo #{connectUpdateStatusInfo.distributionLabel}. <span class="bold">Nuxeo Connect registration can not be validated.</span>
               <span id="mayBeNeedUpdate">It might be <span class="bold">not up to date.</span></span>
-              <span class="bold" id="connectHotFixesCountMsg" style="display:none"><span id="connectHotFixesCount">3</span> hotfix(es) published since this release.</span></p>
+              <span class="bold" id="connectHotFixesCountMsg" style="display:none"><a target="marketplace" href="https://connect.nuxeo.com/nuxeo/site/marketplace/hotfixes/#{connectUpdateStatusInfo.distributionLabel}"><span id="connectHotFixesCount">3</span> hotfix(es) published since this release.</a></span></p>
             </div>
            <div class="links">
               <a href="mailto:connect-support@nuxeo.com?subject=Issue%20in%20Connect%20contract%20#{connectUpdateStatusInfo.identifier}">Contact connect-support@nuxeo.com to reactivate Nuxeo Connect</a>
@@ -49,7 +49,7 @@
            <div class="bannerMessage">
             <p>This application is powered by Nuxeo #{connectUpdateStatusInfo.distributionLabel} and is <span class="bold">not registered in Nuxeo Connect.</span>
             <span id="mayBeNeedUpdate">It might be <span class="bold">not up to date.</span></span>
-            <span class="bold" id="connectHotFixesCountMsg" style="display:none"><span id="connectHotFixesCount">3</span> hotfix(es) published since this release.</span></p>
+            <span class="bold" id="connectHotFixesCountMsg" style="display:none"><a target="marketplace" href="https://connect.nuxeo.com/nuxeo/site/marketplace/hotfixes/#{connectUpdateStatusInfo.distributionLabel}"><span id="connectHotFixesCount">3</span> hotfix(es) published since this release.</a></span></p>
             <p> Enable Nuxeo Connect if you want to register and benefit from automatic maintenance.</p>
            </div>
            <div class="links">
