NXP-7011: better label for the drop zone when no file is present

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/widgets/summary/content_widget_template.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/widgets/summary/content_widget_template.xhtml
@@ -17,7 +17,7 @@
 
   <c:if test="#{!hasMainBlob and canHaveMainBlob}">
     <div class="dropzone" context="mainBlob" id="mainBlobDropZone">
-       DROP HERE !!!
+       #{messages['label.dnd.dropHere']}
     </div>
   </c:if>
   <c:if test="#{hasMainBlob}">
