--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/clientSideBanner.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/clientSideBanner.xhtml
@@ -9,26 +9,33 @@
        <c:if test="false"> Instance is registered, but we can not check the status from the server side </c:if>
 
        <c:if test="#{currentNuxeoPrincipal!=null and currentNuxeoPrincipal.isAdministrator()}">
-         <span style="display:none" id="connectExpiredMessageBanner">
+         <div style="display:none" id="connectExpiredMessageBanner">
           <div class="bannerBottom unregistered">
-            <div class="bannerMessage">
-              <p style="padding:0px;margin:0px">This application is powered by Nuxeo #{connectUpdateStatusInfo.distributionLabel}. <span class="bold">Nuxeo Connect registration can not be validated.</span>
-              <span id="mayBeNeedUpdate">It might be <span class="bold">not up to date.</span></span>
-              <span class="bold" id="connectHotFixesCountMsg" style="display:none"><a target="marketplace" href="https://connect.nuxeo.com/nuxeo/site/marketplace/hotfixes/#{connectUpdateStatusInfo.distributionLabel}"><span id="connectHotFixesCount">3</span> hotfix(es) published since this release.</a></span></p>
-            </div>
+           <div class="bannerMessage">
+            <p>This Nuxeo #{connectUpdateStatusInfo.distributionName} instance is not registered to Nuxeo Connect : you won't be able to get the most recent fixes and stay up to date.
+            <span class="bold" id="connectHotFixesCountMsg" style="display:none"><a target="marketplace" href="https://connect.nuxeo.com/nuxeo/site/marketplace/hotfixes/#{connectUpdateStatusInfo.distributionLabel}"><span id="connectHotFixesCount">3</span> hotfix(es) published since this release.</a></span>
+            </p>
+            <p>Nuxeo #{connectUpdateStatusInfo.distributionName} version: #{connectUpdateStatusInfo.distributionVersion}. Register and enable Nuxeo Connect to benefit from automatic maintenance.</p>
+           </div>
            <div class="links">
-              <a href="mailto:connect-support@nuxeo.com?subject=Issue%20in%20Connect%20contract%20#{connectUpdateStatusInfo.identifier}">Contact connect-support@nuxeo.com to reactivate Nuxeo Connect</a>
+              <a href="mailto:connect-support@nuxeo.com?subject=Issue%20in%20Connect%20contract%20#{connectUpdateStatusInfo.identifier}"> &gt; Contact connect-support@nuxeo.com to reactivate Nuxeo Connect</a>
            </div>
            <div class="clear" />
           </div>
-         </span>
+         </div>
 
          <script>
+         <!--
+         jQuery(document).ready(function(){
+             var script = document.createElement( 'script' );
+             script.type = 'text/javascript';
+             script.src = '#{connectUpdateStatusInfo.feedUrl}';
+             jQuery("body").append(script);
+          });
          function displayConnectUpdateStatus(registrationStatus) {
            if (registrationStatus.registered!=true) {
                  jQuery(document).ready(function(){
                      if (registrationStatus.nbPkgs>0) {
-                       jQuery("#mayBeNeedUpdate").css("display","none");
                        jQuery("#connectHotFixesCount").html(""+registrationStatus.nbPkgs);
                        jQuery("#connectHotFixesCountMsg").css("display","block");
                      }
@@ -36,8 +43,8 @@
                  });
            }
          }
+         -->
          </script>
-         <script src="#{connectUpdateStatusInfo.feedUrl}"></script>
        </c:if>
 
       </c:when>
@@ -47,31 +54,38 @@
 
          <div class="bannerBottom unregistered" >
            <div class="bannerMessage">
-            <p>This application is powered by Nuxeo #{connectUpdateStatusInfo.distributionLabel} and is <span class="bold">not registered in Nuxeo Connect.</span>
-            <span id="mayBeNeedUpdate">It might be <span class="bold">not up to date.</span></span>
-            <span class="bold" id="connectHotFixesCountMsg" style="display:none"><a target="marketplace" href="https://connect.nuxeo.com/nuxeo/site/marketplace/hotfixes/#{connectUpdateStatusInfo.distributionLabel}"><span id="connectHotFixesCount">3</span> hotfix(es) published since this release.</a></span></p>
-            <p> Enable Nuxeo Connect if you want to register and benefit from automatic maintenance.</p>
+            <p>This Nuxeo #{connectUpdateStatusInfo.distributionName} instance is not registered to Nuxeo Connect : you won't be able to get the most recent fixes and stay up to date.
+            <span class="bold" id="connectHotFixesCountMsg" style="display:none"><a target="marketplace" href="https://connect.nuxeo.com/nuxeo/site/marketplace/hotfixes/#{connectUpdateStatusInfo.distributionLabel}"><span id="connectHotFixesCount">3</span> hotfix(es) published since this release.</a></span>
+            </p>
+            <p>Nuxeo #{connectUpdateStatusInfo.distributionName} version: #{connectUpdateStatusInfo.distributionVersion}. Register and enable Nuxeo Connect to benefit from automatic maintenance.</p>
            </div>
            <div class="links">
-            <a href="http://doc.nuxeo.com/display/NXDOC/Register+your+Nuxeo+instance" target="_blank">How to enable Nuxeo Connect</a>
-            <a href="https://connect.nuxeo.com/nuxeo/site/connect/trial/form?source=unregisteredClientBanner&#38;product=#{connectUpdateStatusInfo.distributionLabel}" target="_blank">Subscribe to Nuxeo Connect</a>
+            <a href="http://doc.nuxeo.com/display/NXDOC/Register+your+Nuxeo+instance" target="_blank"> &gt; How to enable Nuxeo Connect</a>
+            <a href="https://connect.nuxeo.com/nuxeo/site/connect/trial/form?source=unregisteredClientBanner&#38;product=#{connectUpdateStatusInfo.distributionLabel}" target="_blank"> &gt; Subscribe to Nuxeo Connect</a>
            </div>
            <div class="clear" />
         </div>
 
         <script>
-         function displayConnectUpdateStatus(nbPkg) {
+        <!--
+        jQuery(document).ready(function(){
+            var script = document.createElement( 'script' );
+            script.type = 'text/javascript';
+            script.src = '#{connectUpdateStatusInfo.feedUrl}';
+            jQuery("body").append(script);
+        });
+        function displayConnectUpdateStatus(nbPkg) {
                   jQuery(document).ready(function(){
                   if (nbPkg>0) {
-                   jQuery("#mayBeNeedUpdate").css("display","none");
                    jQuery("#connectHotFixesCount").html(""+nbPkg);
                    jQuery("#connectHotFixesCountMsg").css("display","block");
                   }
                  });
          }
+         -->
         </script>
 
-        <script src="#{connectUpdateStatusInfo.feedUrl}"></script>
+
       </c:otherwise>
 
  </c:choose>
