--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/serverSideBanner.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/serverSideBanner.xhtml
@@ -6,23 +6,19 @@
        <c:if test="#{currentNuxeoPrincipal!=null and currentNuxeoPrincipal.isAdministrator()}">
   <div class="bannerBottom unregistered">
     <div class="bannerMessage">
-             <p>Nuxeo #{connectUpdateStatusInfo.distributionName} version: #{connectUpdateStatusInfo.distributionVersion}. Your<span class="bold"> Nuxeo Connect registration
-
+             <p>Nuxeo #{connectUpdateStatusInfo.distributionName} version: #{connectUpdateStatusInfo.distributionVersion}. Your Nuxeo #{connectUpdateStatusInfo.distributionName} instance is registered but <span class="bold">
             <c:if test="#{connectUpdateStatusInfo.expired}">
-            is expired
+            your registration is expired
             </c:if>
             <c:if test="#{!connectUpdateStatusInfo.expired}">
-            can not be validated (#{messages[connectStatus.status.contractStatusLabel]})
+            your registration status can not be validated (#{messages[connectStatus.status.contractStatusLabel]})
             </c:if>
-
             </span>.</p>
+            <p><a href="mailto:connect-support@nuxeo.com?subject=Issue%20in%20Connect%20contract%20#{connectUpdateStatusInfo.identifier}">Contact connect-support@nuxeo.com to reactivate Nuxeo Connect</a></p>
             <c:if test="#{connectUpdateStatusInfo.availableUpdateCount>0}">
-              <p><a target="marketplace" href="https://connect.nuxeo.com/nuxeo/site/marketplace/hotfixes/#{connectUpdateStatusInfo.distributionLabel}"><span class="bold"> #{connectUpdateStatusInfo.availableUpdateCount} hotfixes have been published your last update.</span></a> Register and enable Nuxeo Connect to benefit from automatic maintenance.</p>
+              <p><a target="marketplace" href="https://connect.nuxeo.com/nuxeo/site/marketplace/hotfixes/#{connectUpdateStatusInfo.distributionLabel}"><span class="bold"> #{connectUpdateStatusInfo.availableUpdateCount} hotfix(es) published since your last update.</span></a></p>
             </c:if>
           </div>
-            <div class="links">
-              <a href="mailto:connect-support@nuxeo.com?subject=Issue%20in%20Connect%20contract%20#{connectUpdateStatusInfo.identifier}">Contact connect-support@nuxeo.com to reactivate Nuxeo Connect</a>
-            </div>
     <div class="clear" />
   </div>
   </c:if>
