--- a/nuxeo-apidoc-webengine/src/main/resources/web/nuxeo.war/incl/apidoc/browse.xhtml
+++ b/nuxeo-apidoc-webengine/src/main/resources/web/nuxeo.war/incl/apidoc/browse.xhtml
@@ -3,8 +3,7 @@
   xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:nxd="http://nuxeo.org/nxweb/document">
 
-  Browse your Nuxeo Platform instance <br/>
-
+  <h3>Browse your Nuxeo Platform instance </h3>
 
   <iframe src="/nuxeo/site/distribution/adm/" frameborder="0" scrolling="auto" width="100%" height="550px"></iframe>
 
