--- a/nuxeo-apidoc-webengine/src/main/resources/web/nuxeo.war/incl/apidoc/seamcomponents.xhtml
+++ b/nuxeo-apidoc-webengine/src/main/resources/web/nuxeo.war/incl/apidoc/seamcomponents.xhtml
@@ -5,7 +5,7 @@
   xmlns:ui="http://java.sun.com/jsf/facelets"
   xmlns:c="http://java.sun.com/jstl/core">
 
-  Seam Components <br/>
+  <h3>Seam Components </h3>
 
 
 <c:if test="false">
@@ -25,5 +25,5 @@
   </table>
 </c:if>
 
-  <iframe src="/nuxeo/site/distribution/adm/listSeamComponentsSimple" frameborder="0" scrolling="auto" width="100%" height="550px"></iframe>
+  <iframe src="/nuxeo/site/distribution/adm/listSeamComponents" frameborder="0" scrolling="auto" width="100%" height="550px"></iframe>
 </div>
