--- a/nuxeo-apidoc-webengine/src/main/resources/web/nuxeo.war/incl/apidoc/xp.xhtml
+++ b/nuxeo-apidoc-webengine/src/main/resources/web/nuxeo.war/incl/apidoc/xp.xhtml
@@ -3,9 +3,8 @@
   xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:nxd="http://nuxeo.org/nxweb/document">
 
-  List extension points and associated contributions <br/>
+  <h3>Extension points </h3>
 
-
-  <iframe src="/nuxeo/site/distribution/adm/listExtensionPointsSimple" frameborder="0" scrolling="auto" width="100%" height="550px"></iframe>
+  <iframe src="/nuxeo/site/distribution/adm/listExtensionPoints" frameborder="0" scrolling="auto" width="100%" height="550px"></iframe>
 
 </div>
