NXP-7080: Update selenium tests

--- a/nuxeo-distribution-dm/ftest/selenium/tests/createGroup.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/createGroup.html
@@ -362,6 +362,11 @@
 	<td>Suppr</td>
 </tr>
 <tr>
+	<td>type</td>
+	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_grouplabel']</td>
+	<td>Suppress</td>
+</tr>
+<tr>
 	<td>watchA4jRequests</td>
 	<td></td>
 	<td></td>
@@ -502,6 +507,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>verifyTextPresent</td>
+	<td>Suppress</td>
+	<td></td>
+</tr>
+<tr>
 	<td>watchA4jRequests</td>
 	<td></td>
 	<td></td>
@@ -534,6 +544,11 @@
 <tr>
 	<td>waitForA4jRequest</td>
 	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Suppress</td>
 	<td></td>
 </tr>
 <tr>
