--- a/nuxeo-distribution-dm/ftest/selenium/tests/createUsers.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/createUsers.html
@@ -125,7 +125,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>//*[@id='createUserView:createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td>members</td>
+	<td>Members group</td>
 </tr>
 <tr>
 	<td>watchA4jRequests</td>
@@ -386,7 +386,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>//*[@id='createUserView:createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td>members</td>
+	<td>Members group</td>
 </tr>
 <tr>
 	<td>watchA4jRequests</td>
@@ -546,7 +546,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>//*[@id='createUserView:createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td>members</td>
+	<td>Members group</td>
 </tr>
 <tr>
 	<td>watchA4jRequests</td>
@@ -706,7 +706,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>//*[@id='createUserView:createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td>members</td>
+	<td>Members group</td>
 </tr>
 <tr>
 	<td>watchA4jRequests</td>
@@ -861,7 +861,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>//*[@id='createUserView:createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td>members</td>
+	<td>Members group</td>
 </tr>
 <tr>
 	<td>watchA4jRequests</td>
