--- a/nuxeo-distribution-dm/ftest/selenium/tests/manageRightsGroups.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/manageRightsGroups.html
@@ -195,7 +195,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>//*[@id='add_rights_form:nxl_user_group_suggestion:nxw_selection_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td>Suppr</td>
+	<td>Suppress</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -285,7 +285,6 @@
 	<td>link=Log out</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
