NXCM-336: add the number of comments on the doc to avoid fetching all the comments each time we display the route

--- a/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/widgets/listing/listing_no_comments_widget_template.xhtml
+++ b/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/widgets/listing/listing_no_comments_widget_template.xhtml
@@ -7,7 +7,11 @@
   xmlns:h="http://java.sun.com/jsf/html"
   xmlns:c="http://java.sun.com/jstl/core">
 
-
-   <h:outputText value="#{commentManagerActions.getCommentsAsThreadOnDoc(field_0).size()}"/>
+  <c:if test="#{field_1}">
+    <h:outputText value="#{field_2}"/>
+  </c:if>
+  <c:if test="#{not field_1}">
+    <h:outputText value="#{commentManagerActions.getCommentsAsThreadOnDoc(field_0).size()}"/>
+  </c:if>
 
 </f:subview>
