use permanent link to nuxeo doc

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/clientSideBanner.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/clientSideBanner.xhtml
@@ -59,7 +59,7 @@
             <p>Nuxeo #{connectUpdateStatusInfo.distributionName} version: #{connectUpdateStatusInfo.distributionVersion}. Register and enable Nuxeo Connect to benefit from automatic maintenance.</p>
            </div>
            <div class="links">
-            <a href="http://doc.nuxeo.com/display/NXDOC/Register+your+Nuxeo+instance" target="_blank"> &gt; How to enable Nuxeo Connect</a>
+            <a href="https://doc.nuxeo.com/x/l4FH" target="_blank"> &gt; How to enable Nuxeo Connect</a>
             <a href="https://connect.nuxeo.com/nuxeo/site/connect/trial/form?source=unregisteredClientBanner&#38;product=#{connectUpdateStatusInfo.distributionLabel}" target="_blank"> &gt; Subscribe to Nuxeo Connect</a>
            </div>
            <div class="clear" />
