--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/connect/connectStatus.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/connect/connectStatus.xhtml
@@ -18,7 +18,7 @@
     <div class="loginInfos">
     <p class="connectNotRegistered">
     #{messages['connect.message.notregistred']} <a
-      href="http://doc.nuxeo.com/display/NXDOC/Register+your+Nuxeo+instance"
+      href="https://doc.nuxeo.com/x/l4FH"
       class="connectLink" target="NuxeoConnectSite">#{messages['connect.message.discoverconnect']}</a>
     </p>
     </div>
