NXP-7080: Fix suite2

--- a/nuxeo-distribution-dm/ftest/selenium/tests/deleteUser.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/deleteUser.html
@@ -105,7 +105,7 @@
 <tr>
 	<td>verifyText</td>
 	<td>//*[@id='createUserView:createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td>members</td>
+	<td>Members group</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -211,7 +211,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>members</td>
+	<td>Members group</td>
 	<td></td>
 </tr>
 <tr>
