NXP-7080: Fix selenium tests

--- a/nuxeo-distribution-dm/ftest/selenium/tests/unblockRights.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/unblockRights.html
@@ -85,12 +85,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>members</td>
+	<td>Members group</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>administrators</td>
+	<td>Administrators group</td>
 	<td></td>
 </tr>
 <tr>
